--- a/styles/style.css
+++ b/styles/style.css
@@ -82,9 +82,25 @@ body {
   background-color: #82B3D3;
 }
 
+.hotel-about-button {
+  text-decoration: none;
+  color: #fff;
+  background-color: #756157;
+}
+
+.hotel-favorites-button {
+  background-color: #82B3D3;
+  color: #fff;
+}
+
+.added-favorites-button {
+  background-color: #7DB54F;
+  color: #fff;
+}
+
 /* ЗАГОЛОВКИ */
 
-.heading {
+.title {
   text-transform: uppercase;
   font-size: 30px;
   line-height: 36px;
@@ -140,22 +156,41 @@ body {
 
 /* ПРЕИМУЩЕСТВА */
 
-.blue-item {
+.true-town {
   color: #fff;
   background-color: #82B3D3;
 }
 
-.light-blue-item {
+.devil-bridge {
+  color: #fff;
+  background-color: #82B3D3;
+}
+
+.small-square {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.dark-blue-item {
+.few-tourists {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.beautiful-road {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.advantages-more {
+.motel {
+  color: #000;
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.food {
   color: #000;
   background-color: #fff;
+}
+
+.souvenirs {
+  color: #000;
+  background-color: rgba(131, 179, 211, 0.12);
 }
 
 /* РАССЫЛКА */
@@ -214,25 +249,9 @@ body {
   color: inherit;
 }
 
-.hotel-about {
-  text-decoration: none;
-  color: #fff;
-  background-color: #756157;
-}
-
 .hotel-price-list {
   font-size: 18px;
   line-height: 21px;
-}
-
-.hotel-favorites {
-  background-color: #82B3D3;
-  color: #fff;
-}
-
-.added-favorites {
-  background-color: #7DB54F;
-  color: #fff;
 }
 
 .hotel-rating {
