--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ body {
 }
 
 /* КНОПКИ */
+
 button, input {
   font-family: "PT Sans", sans-serif;
 }
@@ -165,17 +166,20 @@ button, input {
   font-weight: 700;
 }
 
-/* ОПИСАНИЯ */
-
-.advantages-desc {
-  font-size: 18px;
-  line-height: 21px;
-  margin: 0;
-}
 /* НАВИГАЦИЯ */
 
 .page-header {
   display: flex;
+}
+
+.logo {
+  margin-left: 70px;
+  margin-right: 30px;
+  width: 139px;
+}
+
+.logo img {
+  display: block;
 }
 
 .navigation {
@@ -197,16 +201,6 @@ button, input {
 .navigation-user {
   margin-right: 70px;
   width: 310px;
-}
-
-.logo {
-  margin-left: 70px;
-  margin-right: 30px;
-  width: 139px;
-}
-
-.logo img {
-  display: block;
 }
 
 .navigation-item {
@@ -253,21 +247,21 @@ button, input {
   margin-bottom: 83px;
 }
 
-.advantages-main-title {
-  width: 620px;
-  margin-bottom: 31px;
-}
-
-.advantages-main-desc {
-  width: 654px;
-  margin: 0;
-}
-
 .promo-wrapper {
   margin: 0 auto;
   width: 654px;
   text-align: center;
   margin-bottom: 90px;
+}
+
+.promo-main-title {
+  width: 620px;
+  margin-bottom: 31px;
+}
+
+.promo-main-desc {
+  width: 654px;
+  margin: 0;
 }
 
 .advantages {
@@ -279,69 +273,21 @@ button, input {
   margin-bottom: 30px;
 }
 
-.search-form {
-  text-align: center;
-}
-
-.search-form-desc {
+.advantages-desc {
+  font-size: 18px;
+  line-height: 21px;
   margin: 0;
-  margin-bottom: 56px;
-}
-
-.search-form-title {
-  margin-bottom: 29px;
 }
 
 /* ПРЕИМУЩЕСТВА */
 
 .advantages-list {
   margin: 0;
+  margin-bottom: 90px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  margin-bottom: 90px;
-}
-
-.advantages-more {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-}
-
-.advantages-item {
-  width: 400px;
-  min-height: 384px;
-  padding: 85px;
-  box-sizing: border-box;
-}
-
-.advantages-item img {
-  display: block;
-}
-
-.true-town {
-  width: 1200px;
-  padding: 0;
-}
-
-.true-town-wrapper {
-  display: flex;
-}
-
-.true-town-content {
-  padding: 85px;
-}
-
-.devil-bridge {
-  width: 1200px;
-  display: flex;
-  padding: 0;
-}
-
-.devil-bridge-wrapper {
-  padding: 85px;
 }
 
 .advantages-list li:nth-child(1) {
@@ -364,6 +310,24 @@ button, input {
 
 .advantages-list li:nth-child(5) {
   background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item {
+  width: 400px;
+  min-height: 384px;
+  padding: 85px;
+  box-sizing: border-box;
+}
+
+.advantages-item img {
+  display: block;
+}
+
+.advantages-more {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .advantages-more-wrapper {
@@ -389,12 +353,48 @@ button, input {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
+.true-town {
+  width: 1200px;
+  padding: 0;
+}
+
+.true-town-wrapper {
+  display: flex;
+}
+
+.true-town-content {
+  padding: 85px;
+}
+
+.devil-bridge {
+  width: 1200px;
+  display: flex;
+  padding: 0;
+}
+
+.devil-bridge-wrapper {
+  padding: 85px;
+}
+
 /* ЗАИНТЕРЕСОВАЛИСЬ */
+
+.search-form {
+  text-align: center;
+}
 
 .search-form-wrapper {
   width: 592px;
   margin: 0 auto;
   margin-bottom: 93px;
+}
+
+.search-form-title {
+  margin-bottom: 29px;
+}
+
+.search-form-desc {
+  margin: 0;
+  margin-bottom: 56px;
 }
 
 /* РАССЫЛКА */
@@ -431,25 +431,7 @@ button, input {
   margin-bottom: 46px;
 }
 
-/* ФИЛЬТР */
-
-.hotel-filter {
-  background-image: url("../images/filter-background.jpg");
-  color: #fff;
-  background-color: #82B3D3;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-bottom: 55px;
-}
-
-.hotel-filter-wrapper {
-  margin: 0px 70px;
-}
-
-.filter-form {
-  display: flex;
-  padding-bottom: 70px;
-}
+/* ХЛЕБНЫЕ КРОШКИ */
 
 .breadcrumbs {
   display: flex;
@@ -472,6 +454,26 @@ button, input {
   color: #fff;
 }
 
+/* ФИЛЬТР */
+
+.hotel-filter {
+  background-image: url("../images/filter-background.jpg");
+  color: #fff;
+  background-color: #82B3D3;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 55px;
+}
+
+.hotel-filter-wrapper {
+  margin: 0px 70px;
+}
+
+.filter-form {
+  display: flex;
+  padding-bottom: 70px;
+}
+
 .filter-form-title {
   font-size: 20px;
   line-height: 26px;
@@ -483,6 +485,12 @@ button, input {
   margin: 0;
   list-style-type: none;
   padding: 0;
+}
+
+.filter-form-item {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 15px;
 }
 
 .filter-form-item:last-child {
@@ -508,12 +516,6 @@ button, input {
 .price-choice {
   width: 288px;
   margin-right: 70px;
-}
-
-.filter-form-item {
-  font-size: 18px;
-  line-height: 21px;
-  margin-bottom: 15px;
 }
 
 .catalog-search-results {
@@ -545,9 +547,14 @@ button, input {
   list-style-type: none;
 }
 
-.view-item {
+.view-button {
+  display: block;
   width: 48px;
   height: 48px;
+
+}
+
+.view-item {
   margin-right: 8px;
 }
 
@@ -575,6 +582,11 @@ button, input {
   margin-right: 0;
 }
 
+.hotel-image {
+  display: block;
+  margin-bottom: 16px;
+}
+
 .hotel-link {
   text-decoration: none;
   color: inherit;
@@ -592,11 +604,6 @@ button, input {
   background-color: #F2F2F2;
   font-size: 16px;
   line-height: 20px;
-}
-
-.hotel-image {
-  display: block;
-  margin-bottom: 16px;
 }
 
 .accommodation-type {
@@ -663,22 +670,9 @@ button, input {
   margin-bottom: 35px;
 }
 
-.footer-tel {
-  width: 331px;
-  font-size: 40px;
-  line-height: 40px;
-  color: #000;
-  text-decoration: none;
-}
-
 .footer-social {
   width: 188px;
   margin-right: 190px;
-}
-
-.footer-copyright {
-  width: 115px;
-  margin-left: 235px;
 }
 
 .footer-social-list {
@@ -693,4 +687,17 @@ button, input {
   display: block;
   min-width: 48px;
   min-height: 40px;
+}
+
+.footer-tel {
+  width: 331px;
+  font-size: 40px;
+  line-height: 40px;
+  color: #000;
+  text-decoration: none;
+}
+
+.footer-copyright {
+  width: 115px;
+  margin-left: 235px;
 }
