--- a/styles/style.css
+++ b/styles/style.css
@@ -114,12 +114,17 @@ button, input {
 }
 
 .hotel-about-button {
+  width: 140px;
+  margin-right: 20px;
+  margin-bottom: 16px;
   text-decoration: none;
   color: #fff;
   background-color: #756157;
 }
 
 .hotel-favorites-button {
+  width: 140px;
+  margin-bottom: 16px;
   background-color: #82B3D3;
   color: #fff;
 }
@@ -534,6 +539,7 @@ button, input {
 .view-switcher-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 56px;
 }
 
@@ -575,6 +581,8 @@ button, input {
 }
 
 .hotel-item {
+  display: flex;
+  flex-wrap: wrap;
   width: 340px;
   margin-right: 18px;
   padding: 20px;
@@ -599,13 +607,24 @@ button, input {
 
 .hotel-price-list {
   display: flex;
+  width: 300px;
   font-size: 18px;
   line-height: 21px;
   margin: 0;
   margin-bottom: 16px;
 }
 
+.hotel-price {
+  margin: 0;
+}
+
+.hotel-stars {
+  width: 140px;
+  margin-right: 20px;
+}
+
 .hotel-rating {
+  width: 140px;
   background-color: #F2F2F2;
   font-size: 16px;
   line-height: 20px;
@@ -613,6 +632,7 @@ button, input {
 
 .accommodation-type {
   width: 140px;
+  margin-right: 20px;
 }
 
 /* ПАГИНАЦИЯ */
@@ -626,7 +646,7 @@ button, input {
 .pagination-list {
   display: flex;
   flex-wrap: wrap;
-  width: 400px;
+  width: 600px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -660,6 +680,7 @@ button, input {
 .hotel-counter {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 386px;
 }
 
@@ -670,15 +691,15 @@ button, input {
 /* ПОДВАЛ */
 
 .footer-wrapper {
+  display: flex;
+  justify-content: space-between;
   width: 1060px;
   margin: 0 auto;
-  display: flex;
   margin-bottom: 35px;
 }
 
 .footer-social {
-  width: 188px;
-  margin-right: 190px;
+  width: 300px;
 }
 
 .footer-social-list {
@@ -704,6 +725,10 @@ button, input {
 }
 
 .footer-copyright {
-  width: 115px;
-  margin-left: 235px;
+  width: 300px;
+}
+
+.copyright-logo img {
+  display: block;
+  margin-left: auto;
 }
