--- a/styles/style.css
+++ b/styles/style.css
@@ -68,72 +68,6 @@ button, input {
   font-weight: 700;
 }
 
-.navigation-search-button {
-  display: block;
-  background-color: #756157;
-  color: #fff;
-  text-decoration: none;
-  padding: 9px 15px 8px 15px;
-  width: 160px;
-  box-sizing: border-box;
-}
-
-.search-form-button {
-  display: block;
-  font-size: 20px;
-  line-height: 36px;
-  font-weight: 700;
-  text-decoration: none;
-  color: #fff;
-  background-color: #756157;
-}
-
-.subscribe-button {
-  font-size: 20px;
-  line-height: 36px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #82B3D3;
-}
-
-.filter-buttons {
-  width: 160px;
-}
-
-.filter-form-button {
-  display: block;
-  color: #fff;
-  background-color: #82B3D3;
-}
-
-.reset-link {
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  color: #fff;
-}
-
-.hotel-about-button {
-  width: 140px;
-  margin-right: 20px;
-  margin-bottom: 16px;
-  text-decoration: none;
-  color: #fff;
-  background-color: #756157;
-}
-
-.hotel-favorites-button {
-  width: 140px;
-  margin-bottom: 16px;
-  background-color: #82B3D3;
-  color: #fff;
-}
-
-.added-favorites-button {
-  background-color: #7DB54F;
-  color: #fff;
-}
-
 /* ЗАГОЛОВКИ */
 
 .title {
@@ -141,33 +75,6 @@ button, input {
   text-transform: uppercase;
   font-size: 30px;
   line-height: 36px;
-  font-weight: 700;
-}
-
-.advantages-title {
-  margin: 0;
-  margin-bottom: 30px;
-  text-transform: uppercase;
-  font-size: 24px;
-  line-height: 28px;
-  font-weight: 700;
-}
-
-.hotel-filter-title {
-  margin: 0;
-  margin-bottom: 10px;
-  padding-top: 35px;
-  font-size: 60px;
-  line-height: 78px;
-  font-weight: 700;
-  color: #fff;
-}
-
-.hotel-name {
-  margin: 0;
-  margin-bottom: 16px;
-  font-size: 24px;
-  line-height: 28px;
   font-weight: 700;
 }
 
@@ -226,15 +133,25 @@ button, input {
 
 .favorites {
   margin-right: 20px;
-  width-min: 38px;
-}
-
-.search {
-  min-width: 18px;
+  min-width: 38px;
 }
 
 .active-link {
   text-decoration: underline;
+}
+
+.navigation-search-button {
+  display: block;
+  background-color: #756157;
+  color: #fff;
+  text-decoration: none;
+  padding: 9px 15px 8px 15px;
+  width: 160px;
+  box-sizing: border-box;
+}
+
+.search {
+  min-width: 18px;
 }
 
 /* ГЛАВНАЯ СТРАНИЦА */
@@ -271,22 +188,11 @@ button, input {
   margin: 0;
 }
 
+/* ПРЕИМУЩЕСТВА */
+
 .advantages {
   text-align: center;
 }
-
-.advantages-num {
-  display: block;
-  margin-bottom: 30px;
-}
-
-.advantages-desc {
-  font-size: 18px;
-  line-height: 21px;
-  margin: 0;
-}
-
-/* ПРЕИМУЩЕСТВА */
 
 .advantages-list {
   margin: 0;
@@ -317,8 +223,28 @@ button, input {
   box-sizing: border-box;
 }
 
+.advantages-title {
+  margin: 0;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+}
+
 .advantages-item img {
   display: block;
+}
+
+.advantages-num {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.advantages-desc {
+  font-size: 18px;
+  line-height: 21px;
+  margin: 0;
 }
 
 .advantages-more {
@@ -359,7 +285,8 @@ button, input {
 
 .true-town-image img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 .true-town-content {
@@ -376,11 +303,13 @@ button, input {
 
 .devil-bridge-wrapper {
   padding: 85px;
+  order: 1;
 }
 
 .devil-bridge img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* ЗАИНТЕРЕСОВАЛИСЬ */
@@ -402,6 +331,16 @@ button, input {
 .search-form-desc {
   margin: 0;
   margin-bottom: 56px;
+}
+
+.search-form-button {
+  display: block;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  background-color: #756157;
 }
 
 /* РАССЫЛКА */
@@ -438,6 +377,40 @@ button, input {
   margin-bottom: 46px;
 }
 
+.newsletter-form {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 800px;
+}
+
+.newsletter-label input {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+.newsletter-label {
+  flex-grow: 1;
+}
+
+.newsletter-label-inner input {
+  background-color: #F2F2F2;
+}
+
+.subscribe-button {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #82B3D3;
+  width: 200px;
+  border: 0;
+  padding: 12px 15px;
+}
+
 /* ХЛЕБНЫЕ КРОШКИ */
 
 .breadcrumbs {
@@ -470,6 +443,16 @@ button, input {
   background-size: cover;
   background-repeat: no-repeat;
   margin-bottom: 55px;
+}
+
+.hotel-filter-title {
+  margin: 0;
+  margin-bottom: 10px;
+  padding-top: 35px;
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+  color: #fff;
 }
 
 .hotel-filter-wrapper {
@@ -525,6 +508,40 @@ button, input {
   margin-right: 70px;
 }
 
+.price-controls {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.range {
+  grid-column: 1 / -1;
+}
+
+.range .control-input {
+  width: 100%;
+}
+
+.filter-buttons {
+  width: 160px;
+}
+
+.filter-form-button {
+  display: block;
+  color: #fff;
+  background-color: #82B3D3;
+  border: 0;
+  padding: 14px 15px;
+}
+
+.reset-link {
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #fff;
+}
+
+/* SWITCHER */
+
 .catalog-search-results {
   margin-left: 70px;
   margin-right: 70px;
@@ -574,6 +591,9 @@ button, input {
 /* КАРТОЧКА ОТЕЛЯ */
 
 .hotel-list {
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  column-gap: 18px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -581,58 +601,82 @@ button, input {
 }
 
 .hotel-item {
-  display: flex;
-  flex-wrap: wrap;
   width: 340px;
-  margin-right: 18px;
-  padding: 20px;
-  box-sizing: border-box;
 }
 
-.hotel-item:nth-child(3n) {
-  margin-right: 0;
+.hotel-item-content {
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  column-gap: 20px;
+  row-gap: 16px;
+  padding: 20px;
+}
+
+.hotel-name {
+  margin: 0;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
 }
 
 .hotel-image {
   display: block;
-  margin-bottom: 16px;
   max-width: 100%;
   height: auto;
 }
 
 .hotel-link {
+  grid-column: 1 / -1;
   text-decoration: none;
   color: inherit;
 }
 
+.hotel-about-button {
+  text-decoration: none;
+  color: #fff;
+  background-color: #756157;
+}
+
+.hotel-favorites-button {
+  background-color: #82B3D3;
+  color: #fff;
+  border: 0;
+  padding: 9px 15px 8px;
+}
+
+.added-favorites-button {
+  background-color: #7DB54F;
+  color: #fff;
+}
+
 .hotel-price-list {
+  grid-column: 1 / -1;
   display: flex;
-  width: 300px;
   font-size: 18px;
   line-height: 21px;
   margin: 0;
-  margin-bottom: 16px;
 }
 
 .hotel-price {
   margin: 0;
 }
 
-.hotel-stars {
-  width: 140px;
-  margin-right: 20px;
-}
-
 .hotel-rating {
-  width: 140px;
   background-color: #F2F2F2;
   font-size: 16px;
   line-height: 20px;
+  padding: 9px 22px 8px 23px;
+  text-align: center;
 }
 
 .accommodation-type {
   width: 140px;
   margin-right: 20px;
+}
+
+.hotel-about-button {
+  padding: 9px 15px 8px;
+  text-align: center;
 }
 
 /* ПАГИНАЦИЯ */
