Flex pagination before change to grid

--- a/styles/outline.css
+++ b/styles/outline.css
@@ -32,10 +32,18 @@
   outline: #00ff00 2px solid;
 }
 
-.hotel-item {
-  outline: #0000ff 2px solid;
+.hotel-stars {
+  outline: #00ff00 2px solid;
 }
 
-.hotel-stars {
+.favorites {
+  outline: #00ff00 2px solid;
+}
+
+.favorites-counter {
+  outline: #00ff00 2px solid;
+}
+
+.search {
   outline: #00ff00 2px solid;
 }
