--- a/styles/style.css
+++ b/styles/style.css
@@ -460,8 +460,9 @@ button, input {
 }
 
 .filter-form {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 210px 310px 350px 160px;
+  column-gap: 10px;
   padding-bottom: 70px;
 }
 
@@ -492,6 +493,7 @@ button, input {
   display: block;
   border: 0;
   padding: 0;
+  margin: 0;
 }
 
 .infrastructure {
@@ -503,7 +505,7 @@ button, input {
 }
 
 .price-choice {
-  width: auto;
+  width: 288px;
 }
 
 .price-controls {
@@ -530,7 +532,7 @@ button, input {
 .filter-buttons {
   width: 160px;
   text-align: center;
-  align-self: end;
+  padding-top: 60px;
 }
 
 .filter-form-button {
@@ -634,6 +636,7 @@ button, input {
   display: block;
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .hotel-link {
@@ -696,6 +699,7 @@ button, input {
   display: flex;
   justify-content: space-between;
   padding-top: 30px;
+  padding-bottom: 25px;
 }
 
 .pagination-list {
@@ -725,6 +729,10 @@ button, input {
   background-color: #82B3D3;
   font-size: 20px;
   line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  padding: 12px;
+  box-sizing: border-box;
 }
 
 .pagination-current {
