--- a/styles/style.css
+++ b/styles/style.css
@@ -703,20 +703,14 @@ button, input {
 }
 
 .pagination-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 60px);
+  column-gap: 8px;
+  row-gap: 8px;
   width: 600px;
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.pagination-item {
-  margin-right: 8px;
-}
-
-.pagination-item:last-child {
-  margin-right: 0;
 }
 
 .pagination-link {
